--- a/app/styles/login.module.css
+++ b/app/styles/login.module.css
@@ -2,72 +2,93 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 32.5%;
-    height: 27.5%;
+    width: 35%;
     padding-bottom: 0.5em;
     position: absolute;
     position: absolute;
-    top: 27.5%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
-.loginContainer .header{
-    height: 50%;
+/* header */
+
+.header{
     width: 100%;
     display: flex;
     flex-direction: row;
     padding-top: 1rem;
+    height: 40%;
 }
 
-.loginContainer .header svg{
+ .header svg{
     font-size: 3rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
-}
-
-.loginContainer .header svg{
-    font-size: 3rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
-}
-
-.loginContainer .header span{
-    font-size: 2rem;
+    padding-right: 0.5rem;
+    padding-left: 1rem;
     padding-top: 0.25rem;
 }
 
-.loginContainer .header > span:nth-child(3) {
+ .header span{
+    font-size: 1.75rem;
+    padding-top: 0.75rem;
+}
+
+ .header > span:nth-child(3) {
     padding-left: 0.5rem;
     padding-right: 0.5rem;
 }
 
-.loginContainer .body{
+/* body */
+
+ .body{
     padding: 1rem 0;
-    height: 60%;
+    height: 50%;
     width: 100%;
+}
+
+.inputContainer{
+    margin-bottom: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.loginContainer input{
+.body input{
     width: 90%;
-    height: 1.5rem;
-    padding: 0.25rem;
+    height: 2rem;
 }
 
 .inputLabel{
     position: absolute;
+    left : 2.5rem;
+    margin-top: 0.5rem;
 }
 
-.loginContainer .footer{
-    height: 20%;
+.authenticationLabel{
+    justify-content: flex-start;
+    display: none;
 }
 
-.loginContainer button{
-    width: 4.5rem;
-    height: 2rem;
+/* footer */
+
+.footer{
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    width: 90%;
+    height: 10%;
+}
+
+.footer button{
+    width: 4rem;
+    height: 2.25rem;
     border-radius: 0.25rem;
     background: transparent;
+    font-weight: semibold;
 }
+
+.footer button:hover{
+    background: #FFAF45;
+    color: white;
+}
+
