Expand colour.module.css
Expand available coloue related styles in colour.module.css

--- a/app/styles/colour.module.css
+++ b/app/styles/colour.module.css
@@ -1,9 +1,32 @@
-.grayBorder{
-    border: 1px solid lightgray;
+.grayBoxShadow{
     box-shadow: 0 0 10px gray;
 }
 
 .orangeBackground{
     background-color: #FFAF45;
     color: white;
+}
+
+.orangeFont{
+    color: #FFAF45;
+}
+
+.whiteFont{
+    color: white;
+}
+
+.grayFont{
+    color: gray;
+}
+
+.lightGrayFont{
+    color: gray;
+}
+
+.redFont{
+    color: red;
+}
+
+.grayBorder{
+    border: 1px solid lightgray;
 }
