--- a/app/styles/login.module.css
+++ b/app/styles/login.module.css
@@ -47,26 +47,27 @@
 }
 
 .inputContainer{
-    margin-bottom: 1rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin: 1rem 0rem;
+    text-align: center;
+    padding-left: 5%;
+    padding-right: calc(5% + 0.9rem);
 }
 
 .body input{
-    width: 90%;
+    width: 100%;
     height: 2rem;
+    padding-left: 0.9rem;
 }
 
 .inputLabel{
     position: absolute;
-    left : 2.5rem;
+    left : 2.25rem;
     margin-top: 0.5rem;
+    pointer-events: none;
 }
 
 .authenticationLabel{
-    justify-content: flex-start;
-    display: none;
+    text-align: left;
 }
 
 /* footer */
