Implement global styling and minor refactor
Remove JobApplication and UserProfile as components
Add lightGrayBoxShadow css class
Implement global styling for button, svg, a
Implement foundational css for body and main
rename footer -> loginFooter (in login page)
rename colours -> colour

--- a/app/styles/colour.module.css
+++ b/app/styles/colour.module.css
@@ -2,6 +2,10 @@
     box-shadow: 0 0 10px gray;
 }
 
+.lightGrayBoxShadow{
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
 .orangeBackground{
     background-color: #FFAF45;
     color: white;
