--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -3,8 +3,14 @@ body{
 }
 
 main{
+    height: 100vh;
+}
+
+section{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    height: calc(87.5% - 3rem);
 }
 
 svg, input, button, a{
