--- a/app/styles/footer.module.css
+++ b/app/styles/footer.module.css
@@ -1,6 +1,7 @@
 .footer{
     display: flex;
     justify-content: center;
-    padding: 1rem 2rem;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 0.5rem 0rem;
+    height: calc(5% + 0.5rem);
 }
