--- a/app/styles/navbar.module.css
+++ b/app/styles/navbar.module.css
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 0.5rem 2rem;
+    height: calc(7.5% + 0.5rem);
 }
 
 .navbar .logoText{
