Rename login related files to authenticate
Rename Login.tsx to authenticateUser.tsx
Update router in index.tsx
Rename login.module.tsx to auth.module.css
Move footer from login page to AuthFooter.tsx component

--- a/app/styles/auth.module.css
+++ b/app/styles/auth.module.css
@@ -59,6 +59,19 @@
     padding-left: 0.9rem;
 }
 
+.body p{
+    margin-left: 2rem;
+}
+
+.newAccountSpan{
+    color: #6dade0
+}
+
+.newAccountSpan:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
 .inputLabel{
     position: absolute;
     left : 2.25rem;
