Begin to implement confirm password & tidy of auth module
Remove input height css
Removed unused input placeholder label css
Implement LoginFooter on both auth pages
Implement confirm password input and logic on AuthSignUpBody
Tidy useState variables in AuthSignUpBody
Replace ' with "

--- a/app/styles/global.module.css
+++ b/app/styles/global.module.css
@@ -1,4 +1,4 @@
-/* input containers */
+/* input container styling */
 
 .oneThirdWidthInputContainer{
     width: 33%;
@@ -14,23 +14,9 @@
     padding: 1rem 0rem;
 }
 
-/* input label */
-
-.secondHalfWidthInputLabel{
-    margin-left: 49%;
-}
-
-.secondThirdWidthInputLabel{
-    margin-left: 36%;
-}
-
 @media screen and (max-width: 1200px){
     .oneThirdWidthInputContainer, .halfWidthInputContainer{
         display: block;
         width: 100%;
-    }
-
-    .secondHalfWidthInputLabel, .secondThirdWidthInputLabel{
-        margin-left: 0 !important;
     }
 }
