--- a/app/styles/auth.module.css
+++ b/app/styles/auth.module.css
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: row;
     padding-top: 1rem;
-    height: 40%;
+    height: calc(30% - 1rem);
 }
 
  .header svg, .newAccountHeader svg{
@@ -37,22 +37,19 @@
 }
 
 /* body */
+.authForm{
+    height: 70%;
+}
 
  .loginBody{
     padding: 1rem 0;
-    height: 50%;
+    /* 0.5rem for <p> margin, 4rem for <input> margin 1rem for footer */
+    height: calc(60% - 5.5rem); 
     width: 100%;
-}
-
-.fullWidthInputContainer{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin: 1rem 0rem !important;
 }
 
 .loginBody p{
-    margin-left: 2rem;
+    margin: 0.2rem 1.05rem;
 }
 
 .redirectAuthSpan{
@@ -64,25 +61,18 @@
     cursor: pointer;
 }
 
-.inputLabel{
-    position: absolute;
-    left : 2.25rem;
-    margin-top: 0.5rem;
-    pointer-events: none;
-}
-
 .authenticationLabel{
     text-align: left;
 }
 
 /* footer */
-
 .loginFooter{
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
-    width: 90%;
-    height: 10%;
+    width: 97.5%;
+    height: 40%;
+    padding: 0.5rem 0rem;
 }
 
 .loginFooter button{
