Simplify height of main child containers
Simplify height of main child containers so items placed correctly after importing of primereact css theme

--- a/app/styles/footer.module.css
+++ b/app/styles/footer.module.css
@@ -3,5 +3,5 @@
     justify-content: center;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 0.5rem 0rem;
-    height: calc(5% + 0.5rem);
+    height: calc(5%);
 }
