--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -10,7 +10,7 @@ section{
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: calc(87.5% - 3rem);
+    height: 87.5%;
 }
 
 svg, input, button, a{
