Implement placeholder save and cancel buttons
Adjust job-application indentation
Implement placeholder save and cancel buttons
Implement buttonContainer to right align buttons on edit pages

--- a/app/styles/global.module.css
+++ b/app/styles/global.module.css
@@ -27,3 +27,12 @@
         width: 100%;
     }
 }
+
+.buttonContainer{
+    display: flex;
+    justify-content: right;
+}
+
+.buttonContainer button{
+    margin: 0.25rem;
+}
