Move app to inside pages
Move app to inside pages so @ alias can be used across entire app
Update @ alias to be  "@/*": ["./pages/app/*"]
Update imports to match change in project structure

--- a/pages/app/styles/global.module.css
+++ b/pages/app/styles/global.module.css
@@ -36,3 +36,16 @@
 .buttonContainer button{
     margin: 0.25rem;
 }
+
+.container {
+    display: inline-block;
+    width: 100%;
+}
+
+.container div {
+    display: flex;
+    flex-direction: column;
+    flex-basis: calc(33.333% - 20px);
+    box-sizing: border-box;
+    margin-bottom: 10px;
+}
