Implement delete application on front-end
Implement delete jobapplications icon
Implement deleteJobApplication apiproxy

--- a/app/styles/global.module.css
+++ b/app/styles/global.module.css
@@ -49,3 +49,8 @@
     box-sizing: border-box;
     margin-bottom: 10px;
 }
+
+.deleteIconStyle{
+    background-color: white;
+    color: #FFAF45;
+}
