--- a/app/styles/global.module.css
+++ b/app/styles/global.module.css
@@ -51,8 +51,16 @@
     margin-bottom: 10px;
 }
 
-.deleteIconStyle{
 .deleteIconStyle, .editIconStyle{
     background-color: white;
     color: #FFAF45;
+}
+
+.dataTableButton{
+    border: none;
+    width: 100%;
+    height: 100%;
+    background: white;
+    font-size: 16px;
+    text-align: left;
 }
