--- a/app/styles/navbar.module.css
+++ b/app/styles/navbar.module.css
@@ -22,3 +22,13 @@
 .navbar button{
     border: none;
 }
+
+.navbar .navDropdown{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    padding: 0.25rem 0.75rem;
+    background-color: #FFAF45;
+    top: calc(1rem + 2rem); /* top & bottom padding in navbar + icon height (so they don't overlap) */
+    right: calc(2rem - 0.75rem); /* right padding in navbar minus pddding of dropdown container */
+}
