--- a/app/styles/navbar.module.css
+++ b/app/styles/navbar.module.css
@@ -27,8 +27,9 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    padding: 0.25rem 0.75rem;
+    padding: 0.5rem 0.75rem;
     background-color: #FFAF45;
+    z-index: 1;
     top: calc(1rem + 2rem); /* top & bottom padding in navbar + icon height (so they don't overlap) */
-    right: calc(2rem - 0.75rem); /* right padding in navbar minus pddding of dropdown container */
+    right: calc(2rem - 1rem); /* right padding in navbar minus pddding of dropdown container */
 }
